--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,6 @@ RENDER_LIB = cairo/libwxsvg_cairo.la
 else
 RENDER_DIR = libart
 RENDER_LIB = libart/libwxsvg_libart.la
-RENDER_CFLAGS = $(LIBART_CFLAGS)
 endif
 endif
 
@@ -19,19 +18,19 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   SVGAnimationElement.cpp SVGCircleElement.cpp SVGEllipseElement.cpp\
   SVGFEGaussianBlurElement.cpp SVGFilterElement.cpp SVGImageElement.cpp\
   SVGLineElement.cpp SVGLocatable.cpp SVGMarkerElement.cpp SVGPathElement.cpp\
-  SVGPolylineElement.cpp SVGPolygonElement.cpp\
-  SVGRectElement.cpp SVGSVGElement.cpp SVGTextContentElement.cpp\
+  SVGPolylineElement.cpp SVGPolygonElement.cpp SVGRectElement.cpp\
+  SVGSVGElement.cpp SVGTextContentElement.cpp SVGUseElement.cpp\
   SVGAngle.cpp SVGColor.cpp GetSVGDocument.cpp SVGLength.cpp\
   SVGMatrix.cpp SVGPaint.cpp SVGPoint.cpp SVGTests.cpp SVGTransform.cpp\
   SVGStylable.cpp SVGTextElement.cpp SVGTransformable.cpp\
   SVGElementInstanceList.cpp SVGLengthList.cpp SVGNumberList.cpp\
   SVGPathSegList.cpp SVGPointList.cpp SVGStringList.cpp SVGTransformList.cpp\
-  Elements_SetAttribute.cpp CSSValue.cpp CSSStyleDeclaration.cpp\
+  Elements_CopyConstructors.cpp Elements_SetAttribute.cpp\
+  CSSValue.cpp CSSStyleDeclaration.cpp\
   SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp
 
 libwxsvg_la_LIBADD = xml/libwxxml.la freetype/libwxsvg_freetype.la\
  $(RENDER_LIB)
 libwxsvg_la_LDFLAGS = -version-info 0:0:0
 
-INCLUDES = -I$(top_builddir)/include -I$(top_builddir)/include/wxSVG\
- $(RENDER_CFLAGS)
+INCLUDES = -I$(top_builddir)/include -I$(top_builddir)/include/wxSVG
