--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,13 +19,16 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   SVGFEGaussianBlurElement.cpp SVGFilterElement.cpp SVGImageElement.cpp\
   SVGLineElement.cpp SVGLocatable.cpp SVGMarkerElement.cpp SVGPathElement.cpp\
   SVGPolylineElement.cpp SVGPolygonElement.cpp SVGRectElement.cpp\
-  SVGSVGElement.cpp SVGTextContentElement.cpp SVGUseElement.cpp\
+  SVGSVGElement.cpp SVGTextContentElement.cpp SVGTextElement.cpp\
+  SVGUseElement.cpp\
   SVGAngle.cpp SVGColor.cpp GetSVGDocument.cpp SVGLength.cpp\
-  SVGMatrix.cpp SVGPaint.cpp SVGPoint.cpp SVGTests.cpp SVGTransform.cpp\
-  SVGStylable.cpp SVGTextElement.cpp SVGTransformable.cpp\
+  SVGMatrix.cpp SVGPaint.cpp SVGPoint.cpp SVGPreserveAspectRatio.cpp\
+  SVGRect.cpp SVGTests.cpp SVGTransform.cpp\
+  SVGStylable.cpp SVGTransformable.cpp\
   SVGElementInstanceList.cpp SVGLengthList.cpp SVGNumberList.cpp\
   SVGPathSegList.cpp SVGPointList.cpp SVGStringList.cpp SVGTransformList.cpp\
-  Elements_CopyConstructors.cpp Elements_SetAttribute.cpp\
+  Elements_CopyConstructors.cpp Elements_HasAttribute.cpp\
+  Elements_GetAttribute.cpp Elements_SetAttribute.cpp\
   CSSValue.cpp CSSStyleDeclaration.cpp\
   SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp
 
