--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -140,7 +140,7 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   SVGElementInstanceList.cpp SVGLengthList.cpp SVGNumberList.cpp\
   SVGPathSegList.cpp SVGPointList.cpp SVGStringList.cpp SVGTransformList.cpp\
   Elements_CopyConstructors.cpp Elements_HasAttribute.cpp\
-  Elements_GetAttribute.cpp Elements_SetAttribute.cpp\
+  Elements_GetAttribute.cpp Elements_GetAttributes.cpp Elements_SetAttribute.cpp\
   CSSValue.cpp CSSStyleDeclaration.cpp\
   SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp
 
@@ -186,9 +186,9 @@ am_libwxsvg_la_OBJECTS = SVGDocument.lo svgctrl.lo \
 	SVGNumberList.lo SVGPathSegList.lo SVGPointList.lo \
 	SVGStringList.lo SVGTransformList.lo \
 	Elements_CopyConstructors.lo Elements_HasAttribute.lo \
-	Elements_GetAttribute.lo Elements_SetAttribute.lo CSSValue.lo \
-	CSSStyleDeclaration.lo SVGCanvas.lo SVGCanvasItem.lo \
-	NodeList.lo
+	Elements_GetAttribute.lo Elements_GetAttributes.lo \
+	Elements_SetAttribute.lo CSSValue.lo CSSStyleDeclaration.lo \
+	SVGCanvas.lo SVGCanvasItem.lo NodeList.lo
 libwxsvg_la_OBJECTS = $(am_libwxsvg_la_OBJECTS)
 
 DEFS = @DEFS@
@@ -201,6 +201,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/CSSValue.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/Elements_CopyConstructors.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/Elements_GetAttribute.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/Elements_GetAttributes.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/Elements_HasAttribute.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/Elements_SetAttribute.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/GetSVGDocument.Plo \
@@ -312,6 +313,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CSSValue.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Elements_CopyConstructors.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Elements_GetAttribute.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Elements_GetAttributes.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Elements_HasAttribute.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Elements_SetAttribute.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/GetSVGDocument.Plo@am__quote@
