Still solving wxXML name conflicts.
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/trunk@261 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/configure.in
+++ b/configure.in
@@ -125,10 +125,10 @@ dnl create Makefiles
 AC_OUTPUT([
   Makefile
   include/Makefile
-  include/wxXML/Makefile
+  include/wxSVGXML/Makefile
   include/wxSVG/Makefile
-  src/xml/Makefile
-  src/xml/expat/Makefile
+  src/svgxml/Makefile
+  src/svgxml/expat/Makefile
   src/Makefile
   src/agg/Makefile
   src/cairo/Makefile
