Svgui integrated to wxsvg
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/trunk@266 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,10 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   Elements_CopyConstructors.cpp Elements_HasAttribute.cpp\
   Elements_GetAttribute.cpp Elements_GetAttributes.cpp Elements_SetAttribute.cpp\
   CSSValue.cpp CSSStyleDeclaration.cpp\
-  SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp
+  SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp\
+  SVGUIButton.cpp SVGUIContainer.cpp SVGUIControl.cpp SVGUIElement.cpp\
+  SVGUINoteBook.cpp SVGUIRotatingCtrl.cpp SVGUIScrollBar.cpp\
+  SVGUITextCtrl.cpp SVGUITransform.cpp SVGUIWindow.cpp ElementTransform.cpp
 
 libwxsvg_la_LIBADD = svgxml/libwxsvgxml.la freetype/libwxsvg_freetype.la\
  $(RENDER_LIB)
