--- a/configure.in
+++ b/configure.in
@@ -13,7 +13,7 @@ AC_ARG_ENABLE(debug,
  USE_DEBUG="$enableval", USE_DEBUG="no")
 AC_ARG_ENABLE(render,
  [  --enable-render[=render]          Specify the render: libart (default), agg or cairo],
- [USE_RENDER=$enableval], [USE_RENDER=libart])
+ [USE_RENDER=$enableval], [USE_RENDER=agg])
 
 AC_MSG_CHECKING(for install location)
 case "$prefix" in
@@ -50,6 +50,7 @@ esac
 dnl render
 AM_CONDITIONAL(USE_RENDER_AGG, [test "$USE_RENDER" = "agg"])
 AM_CONDITIONAL(USE_RENDER_CAIRO, [test "$USE_RENDER" = "cairo"])
+AM_CONDITIONAL(USE_RENDER_LIBART, [test "$USE_RENDER" = "libart"])
 case "$USE_RENDER" in
 libart)
   dnl check for libart library
@@ -65,14 +66,21 @@ libart)
   AC_SUBST(LIBART_CFLAGS)
   AC_SUBST(LIBART_LIBS)
   CXXFLAGS="$CXXFLAGS -DUSE_RENDER_LIBART"
+  font_engine=freetype
   ;;
 agg)
   dnl check for agg
-  AC_CHECK_LIB(agg, main, [AGG_LIBS=-lagg], [AC_MSG_ERROR([*** missing library AGG])])
-  AC_CHECK_HEADER([agg2/agg_color_rgba.h], [], [AC_MSG_ERROR([*** missing library AGG])])
-  AC_SUBST(AGG_CFLAGS)
-  AC_SUBST(AGG_LIBS)
-  CXXFLAGS="$CXXFLAGS -DUSE_RENDER_AGG"
+  AC_CHECK_LIBAGG( 2.5, [], [AC_MSG_ERROR([*** missing library AGG])])
+  CXXFLAGS="$CXXFLAGS -DUSE_RENDER_AGG $LIBAGG_CFLAGS"
+  LDFLAGS="$LDFLAGS $LIBAGG_LIBS"
+  case "$host" in
+    *mingw*)
+    LIBS="$LIBS -laggfontwin32tt"
+    ;;
+    *)
+    font_engine=freetype
+    ;;
+  esac
   ;;
 cairo)
   dnl check for cairo
@@ -81,26 +89,36 @@ cairo)
   AC_SUBST(CAIRO_CFLAGS)
   AC_SUBST(CAIRO_LIBS)
   CXXFLAGS="$CXXFLAGS -DUSE_RENDER_CAIRO"
+  font_engine=freetype
   ;;
 *)
   AC_MSG_ERROR([*** Unknown render "$USE_RENDER"])
   ;;
 esac
 
-dnl check for pango and freetype library
-PKG_CHECK_MODULES(PANGO, pangoft2 >= 1.2.0)
-PKG_CHECK_MODULES(FONTCONFIG, fontconfig)
-AC_CHECK_PROG(FREETYPE_CONFIG, freetype-config, yes, no)
-if test $FREETYPE_CONFIG = no; then
-  AC_MSG_ERROR([
-    wxSVG requires freetype library.
-    Please check that freetype-config is in path.
-  ])
-fi
-FREETYPE_CFLAGS="`freetype-config --cflags` $CXXFLAGS $FONTCONFIG_CFLAGS $PANGO_CFLAGS"
-FREETYPE_LIBS="`freetype-config --libs` $LIBS $FONTCONFIG_LIBS $PANGO_LIBS"
-AC_SUBST(FREETYPE_CFLAGS)
-AC_SUBST(FREETYPE_LIBS)
+dnl Font_engine
+case "$font_engine" in
+freetype)
+  dnl check for pango and freetype library
+  PKG_CHECK_MODULES(PANGO, pangoft2 >= 1.2.0)
+  PKG_CHECK_MODULES(FONTCONFIG, fontconfig)
+  AC_CHECK_PROG(FREETYPE_CONFIG, freetype-config, yes, no)
+  if test $FREETYPE_CONFIG = no; then
+    AC_MSG_ERROR([
+      wxSVG requires freetype library.
+      Please check that freetype-config is in path.
+    ])
+  fi
+  FREETYPE_CFLAGS="`freetype-config --cflags` $CXXFLAGS $FONTCONFIG_CFLAGS $PANGO_CFLAGS"
+  FREETYPE_LIBS="`freetype-config --libs` $LIBS $FONTCONFIG_LIBS $PANGO_LIBS"
+  AC_SUBST(FREETYPE_CFLAGS)
+  AC_SUBST(FREETYPE_LIBS)
+  LDFLAGS="$LDFLAGS $FREETYPE_LIBS"
+  ;;
+*)
+  ;;
+esac
+AM_CONDITIONAL(USE_FREETYPE, [test "$font_engine" = "freetype"])
 
 dnl check wxWidgets >= 2.6.3
 AM_PATH_WXCONFIG(2.6.3, WXFOUND=1)
@@ -113,7 +131,7 @@ if test "$WXFOUND" != 1; then
     ])
 fi
 CXXFLAGS="$CXXFLAGS $DEBUG_FLAGS $WX_CXXFLAGS "
-LIBS="$LIBS $WX_LIBS "
+LIBS="$LIBS $WX_LIBS"
 
 dnl vars
 AC_SUBST(LDFLAGS)
