updated .cvsignore and generated wrapper for msw/py25
git-svn-id: file:///home/jordan/Development/wxSVG/wxsvg-svn/trunk@286 918b0bbe-f86e-4b6f-834e-cb0f658702cb

--- a/.cproject
+++ b/.cproject
@@ -91,6 +91,7 @@
 <extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
 </extensions>
 </storageModule>
+<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
 </cconfiguration>
 </storageModule>
 </cproject>
