--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,11 +44,7 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   Elements_CopyConstructors.cpp Elements_HasAttribute.cpp\
   Elements_GetAttribute.cpp Elements_GetAttributes.cpp Elements_SetAttribute.cpp\
   CSSValue.cpp CSSStyleDeclaration.cpp\
-  SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp\
-  SVGUIButton.cpp SVGUIContainer.cpp SVGUIControl.cpp SVGUIElement.cpp\
-  SVGUINoteBook.cpp SVGUINoteBookContent.cpp SVGUIRotatingCtrl.cpp SVGUIScrollBar.cpp\
-  SVGUITextCtrl.cpp SVGUITransform.cpp SVGUIWindow.cpp ElementTransform.cpp\
-  SVGUIID.cpp $(FFMPEG_SRC)
+  SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp $(FFMPEG_SRC)
 
 libwxsvg_la_LIBADD = svgxml/libwxsvgxml.la $(RENDER_LIB) $(TEXT_LIB)
 
