--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,8 @@
 
-SUBDIRS = src svgview svgui include
+SUBDIRS = src svgview include
 
 ACLOCAL_AMFLAGS=-I.
 
 run: all
 	$(MAKE) -C svgview run
 
-runui: all
-	$(MAKE) -C svgui run
