--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,5 +47,6 @@ libwxsvg_la_SOURCES = SVGDocument.cpp svgctrl.cpp\
   SVGCanvas.cpp SVGCanvasItem.cpp NodeList.cpp $(FFMPEG_SRC)
 
 libwxsvg_la_LIBADD = svgxml/libwxsvgxml.la $(RENDER_LIB) $(TEXT_LIB)
+libwxsvg_la_LDFLAGS = -no-undefined -version-info @LIBRARY_VERSION@
 
 INCLUDES = -I$(top_builddir)/include -I$(top_builddir)/include/wxSVG
